# worldStream

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
assets/materials/: basic.yaml
assets/materials/demo/: demoDescriptors.yaml  pipeline.yaml  shader.vert
assets/materials/descriptors/: demo.yaml
assets/materials/mesh/: descriptors.yaml  pipeline.yaml  shader.frag  shader.vert
assets/materials/meshDemo/: global.yaml  perObject.yaml  pipeline.yaml  shader.frag  shader.vert  textures.yaml
assets/materials/perlinGenerator/: pipeline.yaml  shader.frag
assets/materials/pipelines/: demo.yaml
assets/materials/preethamGenerator/: pipeline.yaml  shader.frag
assets/materials/skyBox/: pipeline.yaml  shader.frag  shader.vert  skyboxDescriptors.yaml
assets/materials/skyTest/: global.yaml  pipeline.yaml  shader.frag
assets/materials/terrain/: perObject.yaml  pipeline.yaml  shader.frag  shader.vert  terrainData.yaml  textures.yaml
assets/materials/terrainGenerator/: noiseFunctions.glsl  pipeline.yaml  shader.frag  shader.vert
assets/materials/terrainWireframe/: pipeline.yaml  shader.frag  shader.vert
assets/materials/test/: global.yaml  pipeline.yaml  shader.frag
assets/materials/triangle/: pipeline.yaml
assets/materials/wireframe/: pipeline.yaml
src/: CMakeLists.txt  main.cpp
src/AssetManagement/: CMakeLists.txt
src/AssetManagement/Meshes/: CMakeLists.txt  CubeGenerator.cpp  CubeGenerator.hpp  Mesh.cpp  Mesh.hpp  PlaneGenerator.cpp  PlaneGenerator.hpp
src/Core/: CMakeLists.txt  DeletionQueue.cpp  DeletionQueue.hpp  Types.hpp  Vector.hpp
src/Game/: CMakeLists.txt  Game.cpp  Game.hpp  RenderGraphSetup.cpp  RenderGraphSetup.hpp
src/Game/Camera/: Camera.cpp  Camera.hpp  FreeCam.hpp
src/Game/GameObjects/: GameObject.hpp  Plane.hpp  SkyBox.hpp  Skybox.hpp  SkyboxGenerator.hpp  TerrainManager.hpp
src/Game/Input/: Duration.hpp  Input.cpp  Input.hpp
src/Game/Scene/: Scene.hpp  TestScene.cpp  TestScene.hpp
src/Render/: CMakeLists.txt  Config.h  Debug.cpp  Debug.hpp  Render.cpp  Render.hpp  Window.hpp
src/RenderEngine/: CMakeLists.txt  CommandPool.cpp  CommandPool.hpp  CommandSubmitter.cpp  CommandSubmitter.hpp  Config.hpp  Debug.cpp  Debug.hpp  FrameData.cpp  FrameData.hpp  FrameSubmitInfo.hpp  RenderEngine.cpp  RenderEngine.hpp  VkUtils.cpp  VkUtils.hpp  VulkanInfo.hpp  VulkanInitHelpers.cpp  VulkanInitHelpers.hpp  Window.hpp
src/RenderEngine/Commands/: CommandPool.cpp  CommandPool.hpp  CommandSubmitter.cpp  CommandSubmitter.hpp
src/RenderEngine/FrameManagement/: FrameData.cpp  FrameData.hpp  FrameManager.cpp  FrameManager.hpp  SwapchainManager.cpp  SwapchainManager.hpp  Window.cpp  Window.hpp
src/RenderEngine/FrameResources/: FrameData.cpp  FrameData.hpp  SwapchainManager.cpp  SwapchainManager.hpp  Window.cpp
src/RenderEngine/InternalResources/: CommandPool.cpp  CommandPool.hpp  Fence.cpp  Fence.hpp  Semaphore.cpp  Semaphore.hpp
src/RenderEngine/RenderGraph/: GraphContext.hpp  RenderGraph.cpp  RenderGraph.hpp
src/RenderEngine/RenderObjects/: DescriptorLayoutBuilder.cpp  DescriptorLayoutBuilder.hpp  DescriptorSetBuilder.cpp  DescriptorSetBuilder.hpp  Materials.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  RenderObject.hpp  TextureRenderObject.hpp
src/RenderEngine/RenderResources/: Buffer.cpp  Buffer.hpp  CommandPool.cpp  CommandPool.hpp  Fence.cpp  Fence.hpp  Image.cpp  Image.hpp  Semaphore.cpp  Semaphore.hpp
src/ResourceManagement/: BufferRegistry.hpp  CMakeLists.txt  MaterialManager.cpp  MaterialManager.hpp  ResourceManager.cpp  ResourceManager.hpp  ShaderLoading.cpp
src/ResourceManagement/MaterialManagerUtils/: ShaderLoading.cpp  ShaderLoading.hpp  stringParsers.cpp  stringParsers.hpp  yamlParsers.cpp  yamlParsers.hpp
src/ResourceManagement/RenderResources/: Buffer.cpp  Buffer.hpp  CommandPool.cpp  CommandPool.hpp  DescriptorBuffer.cpp  DescriptorBuffer.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Fence.cpp  Fence.hpp  Image.cpp  Image.hpp  ImageView.hpp  Model.hpp  Sampler.cpp  Sampler.hpp  Semaphore.cpp  Semaphore.hpp  SparseBuffer.cpp  SparseBuffer.hpp  SparseImage.cpp  SparseImage.hpp  VertexAttribute.hpp
src/ResourceManagement/RenderResources/RenderObjects/: Materials.hpp  PipelineBuilder.hpp  RenderObject.hpp
src/ResourceManager/: ResourceManager.hpp
